--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <hr>
         <table>
             <tr>
-                <td><img src="santa.jpeg" alt="Santa Image" height="100px" width="100px"/></td>
+                <td><img src="Images/santa.jpeg" alt="Santa Image" height="100px" width="100px"/></td>
                 <td> <h3>Name: Smrati Tiwari</h3>
                     <h3><em>Hobbies</em></h3>
                     <ul>
