--- a/MyHobbies.html
+++ b/MyHobbies.html
@@ -14,7 +14,7 @@
             <li>PCM</li>
            </ol>
            
-    <form action="mailto:stiwari@ptc.com">
+    <form action="mailto:abc@gmail.com">
       <label>Your Name:</label>
       <input type="text" name=""/></br></br>
       <label>Your Email:</label>
