--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            My Resume
+             Smrati's Personal Site
         </title>
         <meta charset="UTF-8">
 
